--- a/WhereToPlay/app/src/main/res/values-v19/dimens.xml
+++ b/WhereToPlay/app/src/main/res/values-v19/dimens.xml
@@ -225,6 +225,7 @@
     <dimen name="height_65">65dp</dimen>
     <dimen name="height_70">70dp</dimen>
     <dimen name="height_80">80dp</dimen>
+    <dimen name="height_83">83dp</dimen>
     <dimen name="height_90">90dp</dimen>
     <dimen name="height_96">96dp</dimen>
     <dimen name="height_100">100dp</dimen>
