--- a/WhereToPlay/app/src/main/res/layout/dialog_picker.xml
+++ b/WhereToPlay/app/src/main/res/layout/dialog_picker.xml
@@ -73,7 +73,7 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:text="@string/confirm"
-                android:textColor="@color/text_and_buttor_orange"
+                android:textColor="@color/text_red"
                 android:textSize="@dimen/normal_textsize"/>
 
             <View
