--- a/WhereToPlay/app/src/main/res/layout/fragment_search.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_search.xml
@@ -12,13 +12,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/menu_height"
-            android:background="@color/text_and_buttor_orange"
+            android:background="@color/text_red"
             android:orientation="horizontal"
             android:paddingTop="@dimen/statubar_height">
 
@@ -57,7 +57,7 @@
                 android:gravity="center"
                 android:onClick="@{click.onClick}"
                 android:text="@string/search"
-                android:textColor="@color/text_black"
+                android:textColor="@color/text_white"
                 android:textSize="@dimen/textsize_level2"/>
 
         </LinearLayout>
@@ -75,7 +75,7 @@
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:text="@string/referral_search"
-                android:textColor="@color/pay_reserve_list_text"
+                android:textColor="@color/text_black_sec"
                 android:textSize="@dimen/textsize_level2"/>
 
             <!--<android.support.v7.widget.RecyclerView
@@ -99,7 +99,7 @@
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/line_height"
-                android:background="@color/pay_reserve_list_divider"/>
+                android:background="@color/pay_reserve_list_divider_white"/>
 
             <!--<LinearLayout
                 android:layout_width="match_parent"
@@ -114,7 +114,7 @@
                 android:layout_marginTop="@dimen/margin_15"
                 android:layout_marginRight="@dimen/margin_15"
                 android:text="@string/no_search_history"
-                android:textColor="@color/pay_reserve_list_text"
+                android:textColor="@color/text_black_sec"
                 android:textSize="@dimen/textsize_level2"/>
 
             <android.support.v7.widget.RecyclerView
