--- a/WhereToPlay/app/src/main/res/layout/item_search_result.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_search_result.xml
@@ -14,6 +14,6 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/padding_15"
         android:text="@{name}"
-        android:textColor="@color/white"
+        android:textColor="@color/text_black"
         android:textSize="@dimen/normal_textsize"/>
 </layout>
