--- a/WhereToPlay/app/src/main/res/layout/item_order.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_order.xml
@@ -9,6 +9,7 @@
         android:layout_margin="10dp"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/tv_storeName"
             android:layout_width="wrap_content"
             android:text="上海天地汇会所"
             android:drawableLeft="@drawable/icon_shangjia"
@@ -16,6 +17,7 @@
             android:textSize="18sp"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/tv_payState"
             android:layout_width="wrap_content"
             android:text="待支付"
             android:textColor="#C4483C"
@@ -87,7 +89,7 @@
                 android:layout_marginLeft="@dimen/margin_10"
                 android:layout_toRightOf="@+id/tv_pay_item_time"
                 android:text="text"
-                android:textColor="@color/pay_reserve_list_text"
+                android:textColor="#333333"
                 android:textSize="@dimen/textsize_levelsmall" />
 
             <TextView
@@ -110,7 +112,7 @@
                 android:layout_marginLeft="@dimen/margin_10"
                 android:layout_toRightOf="@+id/tv_pay_item_room_category"
                 android:text="text"
-                android:textColor="@color/pay_reserve_list_text"
+                android:textColor="#333333"
                 android:textSize="@dimen/textsize_levelsmall" />
 
             <TextView
@@ -123,7 +125,7 @@
                 android:layout_marginTop="@dimen/margin_10"
                 android:layout_toRightOf="@+id/tv_pay_item_room"
                 android:text="@string/pay_reserve_decorate_category"
-                android:textColor="@color/pay_reserve_list_text"
+                android:textColor="#333333"
                 android:textSize="@dimen/textsize_levelsmall" />
 
             <TextView
@@ -133,8 +135,8 @@
                 android:layout_alignTop="@+id/tv_pay_item_decorate_category"
                 android:layout_marginLeft="@dimen/margin_10"
                 android:layout_toRightOf="@+id/tv_pay_item_decorate_category"
-                android:text="text"
-                android:textColor="@color/pay_reserve_list_text"
+                android:text=""
+                android:textColor="#333333"
                 android:textSize="@dimen/textsize_levelsmall" />
 
             <TextView
