--- a/WhereToPlay/app/src/main/res/layout/item_check_comments.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_check_comments.xml
@@ -68,7 +68,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_15"
-            android:text="很棒很棒好吧好吧好吧好吧好吧好吧好吧好吧好吧好吧很棒好吧好吧好吧好吧好吧好吧好吧好吧好吧好吧"
             android:layout_marginBottom="@dimen/margin_10"
             app:layout_constraintTop_toBottomOf="@+id/iv_check_comments_avatar"
             app:layout_constraintStart_toStartOf="parent"
@@ -82,6 +81,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@color/text_red"
             />
     </android.support.constraint.ConstraintLayout>
 
